add_device_object_lib(NAME cornerstone260 
SRCS cornerstone260.cpp INCLUDES cornerstone260.h)


# add_executable(cornerstone_play cornerstone_play.cpp)
# add_executable(setwave setwave.cpp)

# target_link_libraries(cornerstone_play cornerstone260 foxtrot)
# target_link_libraries(setwave foxtrot cornerstone260)
